--- a/style.css
+++ b/style.css
@@ -4,4 +4,61 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans';
+}
+
+/*  Header  */
+
+.header {
+    height: 809px;
+    background-size: cover;
+    background-image: url('./images/banner/banner2.png');
+}
+
+.header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 525px;
+    position: absolute;
+    top: 216px;
+    left: 845px;
+}
+
+.header-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 65px;
+    line-height: 76px;
+    text-align: right;
+    color: #151414;
+}
+
+.header-description {
+    margin: 24px 0 32px 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: right;
+    color: #444343;
+}
+
+.button {
+    width: 160px;
+    height: 64px;
+    background: #F15B22;
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 23px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button:hover {
+    border: 2px solid #F15B22;
+    color: #F15B22;
+    background: #FFFFFF;
 }
